# sbd

./: .gitignore  BACKEND_ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CLEANUP_API.md  CSR_EXPORT_DESIGN.md  CSR_EXPORT_STATUS.md  DUAL_BACKEND_BUILD.md  GPU_SUPPORT.md  IMPLEMENTATION_SUMMARY.md  INSTALL_PYTHON.md  MPI_COMMUNICATION_API.md  PYTHON_BINDINGS_ARCHITECTURE.md  PYTHON_BINDINGS_PLAN.md  PYTHON_BINDINGS_QUICKSTART.md  QUICKSTART_DUAL_BACKEND.md  README.md  README_PYTHON.md  SIMPLIFIED_API.md  pyproject.toml  setup.py  setup.py.cpu  setup.py.gpu
.github/: README.md
apps/caop_selected_basis_diagonalization/: README.md  main.cc
apps/chemistry_gdb_selected_basis_diagonalization/: main.cc
apps/chemistry_tpb_selected_basis_diagonalization/: Configuration
python/: __init__.py  __init__.py.git  bindings.cpp  device_config.py  sbd_solver.py
python/examples/: ._h2o_backend_selection.py  README.md  bitstring_to_determinant_cpp_demo.py  chemistry_simplified.py  csr_export_demo.py  h2o_backend_selection.py  h2o_cpu_gpu.py  h2o_simplified.py  mpi_communication_demo.py  quantum_classical_hybrid.py  simple_h2o.py  sqd_integration_sbd.py  test_n2_sbd.py
python/tests/: README_CSR_TESTS.md  test_basic.py  test_csr_export.py  test_csr_minimal.py  test_h2o.py
samples/caop_selected_basis_diagonalization/: Configuration  README.md  diag  main.cc  run.sh
samples/chemistry_gdb_selected_basis_diagonalization/: Configuration  main.cc  run.sh  run_b1.sh
samples/chemistry_tpb_selected_basis_diagonalization/: Configuration  README.md  main.cc  run.sh
(+55 files in other folders)
